--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,21 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+# connect to this db command:  docker exec -it meeting_knowledge_db psql -U admin -d knowledge_base
+#### DROP ALL TABLES COMMAND #####
+# DO
+# $$
+# DECLARE
+#     r RECORD;
+# BEGIN
+#     -- Loop through all tables in the public schema
+#     FOR r IN (SELECT tablename FROM pg_tables WHERE schemaname = 'public') LOOP
+#         EXECUTE 'DROP TABLE IF EXISTS ' || quote_ident(r.tablename) || ' CASCADE';
+#     END LOOP;
+# END
+# $$;
+
+
   # 2. Backend service
   # backend:
   #   build: ./backend
